# AGSscheduling

AlgoritmoGenetico/: Ag.cpp  Ag.h  AlgoritmoGenetico.cbp  CMakeLists.txt  Cromossomo.cpp  Cromossomo.h  Curso.h  Disciplina.cpp  Disciplina.h  Docente.h  Elemento.cpp  Elemento.h  Estudante.h  README.md  Sala.h  file_to_object.cpp  file_to_object.h  files.cpp  files.h  main.cpp
